--- a/style.css
+++ b/style.css
@@ -41,12 +41,28 @@ footer .Featured {
   margin-bottom: 20px;
 }
 
+.header_mobile {
+  margin-top: 20px;
+}
 .header_mobile .header_top {
   display: flex;
+  border: 1px solid #000;
+  align-items: center;
 }
 .header_mobile .header_top .navbar_mobile {
   font-size: 30px;
   color: #978d8d;
+}
+.header_mobile .header_top .title {
+  text-align: center;
+  flex-grow: 1;
+}
+.header_mobile .header_top .title a {
+  font-family: "Prata", serif;
+  color: #cc6262;
+  font-weight: 100;
+  font-size: 40px;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .header_mobile .search_box {
   text-align: center;
