--- a/style.scss
+++ b/style.scss
@@ -60,13 +60,27 @@ footer {
 
 
 .header_mobile{
+  margin-top: 20px;
 
   .header_top{
     display: flex;
-
+    border: 1px solid #000;
+    align-items: center;
     .navbar_mobile{
       font-size: 30px;
       color: $icon-color;
+    }
+
+    .title {
+      text-align: center;
+      flex-grow: 1;
+      a {
+        font-family: $point-font;
+        color: $point-color;
+        font-weight: 100;
+        font-size: 40px;
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      }
     }
 
 
