--- a/style.scss
+++ b/style.scss
@@ -45,7 +45,8 @@ footer {
 
 
 .header_web,
-.navbar_web
+.navbar_web,
+.header_tab
 {
   display: none;
 }
@@ -62,18 +63,22 @@ footer {
 .header_mobile{
   margin-top: 20px;
 
-  .header_top{
-    display: flex;
-    border: 1px solid #000;
-    align-items: center;
+  .header_top_mobile{
+    position: relative;
+    height: 60px;
+    line-height: 60px;
+
     .navbar_mobile{
       font-size: 30px;
       color: $icon-color;
+      position: absolute;
+      transform: translate(0,5%);
+      margin-left: 10px;
     }
 
+    
     .title {
       text-align: center;
-      flex-grow: 1;
       a {
         font-family: $point-font;
         color: $point-color;
@@ -949,7 +954,8 @@ footer {
 ////////////////////////////////////////////////////////////////
 
 @media all and (min-width: 645px) {
-  .header_web{
+  .header_web,
+  .header_tab{
     display: none;
   }
 
@@ -987,6 +993,7 @@ footer {
 
 @media all and (min-width: 768px) {
 
+  .header_mobile,
   .header_web {
     display: none;
   }
@@ -997,6 +1004,11 @@ footer {
         font-size: 70px;
       }
     }
+  }
+
+
+  .header_tab{
+    display: block;
   }
 
   .article_box {
@@ -1233,6 +1245,7 @@ footer {
 
 @media all and (min-width: 1024px) {
 
+  .header_tab,
   .header_mobile{
     display: none;
   }
