--- a/style.css
+++ b/style.css
@@ -37,9 +37,14 @@ footer .Featured {
   display: none;
 }
 
+hr {
+  border: 0.1px solid #978d8d;
+}
+
 .hr_solid {
   border: 1px solid #000;
   margin-bottom: 20px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .header_mobile {
@@ -840,11 +845,39 @@ footer .foot_bottom_txt2 span {
   .header_web {
     display: none;
   }
-  .header .title a {
-    font-size: 70px;
-  }
   .header_tab {
     display: block;
+  }
+  .header_tab {
+    margin-top: 20px;
+  }
+  .header_tab .header_top_tab {
+    height: 140px;
+  }
+  .header_tab .header_top_tab .icon_box {
+    display: flex;
+    justify-content: flex-end;
+  }
+  .header_tab .header_top_tab .icon_box ul {
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
+  }
+  .header_tab .header_top_tab .ad {
+    margin-right: 10px;
+    position: absolute;
+    top: 50px;
+  }
+  .header_tab .header_top_tab .title {
+    text-align: center;
+    margin-top: 10px;
+  }
+  .header_tab .header_top_tab .title a {
+    font-family: "Prata", serif;
+    color: #cc6262;
+    font-weight: 100;
+    font-size: 70px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
   .article_box h1 {
     letter-spacing: -2px;
