--- a/style.scss
+++ b/style.scss
@@ -51,11 +51,13 @@ footer {
   display: none;
 }
 
-
-
+hr{
+  border: 0.1px solid $icon-color;
+}
 .hr_solid {
   border: 1px solid #000;
   margin-bottom: 20px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 
@@ -1005,6 +1007,9 @@ footer {
   }
 }
 
+
+
+
 @media all and (min-width: 768px) {
 
   .header_mobile,
@@ -1012,18 +1017,51 @@ footer {
     display: none;
   }
 
-  .header {
-    .title {
-      a {
-        font-size: 70px;
-      }
-    }
+  .header_tab{
+    display: block;
   }
 
 
   .header_tab{
-    display: block;
+
+    margin-top: 20px;
+
+
+  .header_top_tab{
+    height: 140px;
+    .icon_box{
+      display: flex;
+      justify-content: flex-end;
+      ul{
+        width: 200px;
+        display: flex;
+        justify-content: space-between;
+      }
+    }
+
+    .ad{
+      margin-right: 10px;
+      position: absolute;
+      top: 50px;
+    }
+
+
+    .title {
+      text-align: center;
+      margin-top: 10px;
+      a {
+        font-family: $point-font;
+        color: $point-color;
+        font-weight: 100;
+        font-size: 70px;
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      }
+    }
+  }    
+
+    
   }
+
 
   .article_box {
     h1 {
