--- a/style.css
+++ b/style.css
@@ -879,6 +879,57 @@ footer .foot_bottom_txt2 span {
     font-size: 70px;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
+  .header_tab .header_bottom_tab {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px 0;
+  }
+  .header_tab .header_bottom_tab .menu_box {
+    display: flex;
+  }
+  .header_tab .header_bottom_tab .menu_box .menu_title {
+    font-size: 20px;
+    line-height: 40px;
+    font-weight: bold;
+    font-family: "Prata", serif;
+    letter-spacing: 2px;
+  }
+  .header_tab .header_bottom_tab .menu_box .fa-caret-right {
+    margin-left: 5px;
+    font-size: 40px;
+    color: #cc6262;
+  }
+  .header_tab .header_bottom_tab .search_box {
+    text-align: center;
+    width: 40%;
+    height: 40px;
+    border-radius: 10px;
+    border-radius: 20px;
+    background: #ececec;
+    box-shadow: 1px 2px 4px 0px rgba(0, 0, 0, 0.25) inset;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+  }
+  .header_tab .header_bottom_tab .search_box .xi-search {
+    color: #978d8d;
+  }
+  .header_tab .header_bottom_tab .search_box .search_title {
+    color: #978d8d;
+  }
+  .header_tab .header_bottom_tab .search_box .search_btn {
+    color: #fff;
+    width: 50px;
+    height: 30px;
+    font-size: 15px;
+    border: none;
+    border-radius: 18px;
+    background: rgba(204, 98, 98, 0.8);
+    -webkit-backdrop-filter: blur(2px);
+            backdrop-filter: blur(2px);
+  }
   .article_box h1 {
     letter-spacing: -2px;
     font-size: 47px;
