--- a/style.scss
+++ b/style.scss
@@ -1026,8 +1026,7 @@ footer {
 
     margin-top: 20px;
 
-
-  .header_top_tab{
+    .header_top_tab{
     height: 140px;
     .icon_box{
       display: flex;
@@ -1057,8 +1056,63 @@ footer {
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       }
     }
-  }    
+    }
 
+    .header_bottom_tab{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin: 10px 0; 
+
+      .menu_box{
+        display: flex;
+        .menu_title{
+          font-size: 20px;
+          line-height: 40px;
+          font-weight: bold;
+          font-family: $point-font;
+          letter-spacing: 2px;
+        }
+        .fa-caret-right{
+          margin-left: 5px;
+          font-size: 40px;
+          color: $point-color;
+        }
+      }
+
+      .search_box {
+        text-align: center;
+        width: 40%;
+        height: 40px;
+        border-radius: 10px;
+        border-radius: 20px;
+        background: #ececec;
+        box-shadow: 1px 2px 4px 0px rgba(0, 0, 0, 0.25) inset;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 10px;
+      
+        .xi-search {
+          color: $icon-color;
+        }
+      
+        .search_title {
+          color: $icon-color;
+        }
+      
+        .search_btn {
+          color: #fff;
+          width: 50px;
+          height: 30px;
+          font-size: 15px;
+          border: none;
+          border-radius: 18px;
+          background: rgba(204, 98, 98, 0.8);
+          backdrop-filter: blur(2px);
+        }
+      }
+    }
     
   }
 
@@ -1307,10 +1361,9 @@ footer {
     display: flex;
     }
 
-
   .header_web,
   .navbar_web{
-    display: block;
+    display: block;  
   }
 
 
