--- a/style.scss
+++ b/style.scss
@@ -1749,10 +1749,17 @@ footer {
     }
   }
 
+
+
 }
 
 
 @media all and (min-width: 1280px) {
+
+
+
+
+    .wrap_header,
     .wrap {
         width: 1280px;
         margin: 0 auto;
