--- a/style.scss
+++ b/style.scss
@@ -42,7 +42,7 @@ footer {
 ///////////////////////////////////////////////////////////////
 ///////////////////////////////////////////////////////////////
 
-
+//12-12-yh1
 
 .header_web,
 .navbar_web,
